# glaucoma-labeling-tool

./: .gitignore  README.md  Start Labeling.bat  app.py  build_package.ps1  config.yaml  justfile  labeler_config.yaml  pyproject.toml  requirements.txt
data/: fake_patients.csv  fake_patients_interface.csv  opv_24-2_prepared.csv
pages/: labeling.py
scripts/: convert_pdf_image.ipynb  csv_preparation.do  csv_preparation.ipynb  fake_patients.ipynb  hashing.ipynb  prepare_data.py  visual_field_labels.ipynb
utils/: __init__.py  admin_stats.py  cache_manager.py  config.py  data.py  dataloader.py  image_handler.py  labeling.py  labeling_ui.py  patient_tracker.py  storage.py  ui_components.py
